Updated the stylesheet to fix the overflow x issue

--- a/asset/stylesheet.css
+++ b/asset/stylesheet.css
@@ -125,6 +125,7 @@ body{
 
 .body {
     overflow-y: auto;
+    overflow-x: hidden;
     height: 100vh;
     scroll-behavior: smooth;
 }
